[package]
name = "boondock"
description = "Docker daemon API (a fork of Graham Lee's rust-docker)"
version = "0.0.50"
authors = ["Graham Lee <ghmlee@ghmlee.com>",
           "Toby Lawrence <toby@nuclearfurnace.com>",
           "Eric Kidd <git@randomhacks.net>"]
edition = "2018"

license = "Apache-2.0"
homepage = "https://github.com/faradayio/boondock"
repository = "https://github.com/faradayio/boondock"
documentation = "https://docs.rs/boondock"
readme = "README.md"
keywords = ["docker"]

[badges]
appveyor = { repository = "faradayio/boondock", branch = "master", service = "github" }
travis-ci = { repository = "faradayio/boondock", branch = "master" }
maintenance = { status = "passively-maintained" }

[dev-dependencies]
env_logger = "0.7.1"
tokio = { version = "0.2.16", features = ["macros"] }

[dependencies]
ct-logs = "0.6"
dirs = "2.0.2"
error-chain = "0.12.2"
futures = "0.3.4"
hyper = "0.13.4"
hyper-rustls = "0.20.0"
log = "0.4.8"
rustls = "0.17.0"
rustls-native-certs = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.2.16"
url = "2.1.1"
webpki-roots = "0.19"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.7.0"
